namespace cpp cc.service.plugin

service PluginService
{
  list<string> getPlugins()
}